2001-09-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/FScreen.c:
	* fvwm/functions.c (func_config):
	* fvwm/module_interface.c (broadcast_xinerama_state):
	* fvwm/virtual.c (CMD_Xinerama):
	(CMD_XineramaPrimaryScreen):
	(CMD_XineramaSls):
	(CMD_XineramaSlsSize):
	added sls support
	split Xinerama command into Xinerama, XineramaPrimaryScreen,
	XineramaSls and XineramaSlsSize
	restructured parts of the FScreen code

	* fvwm/functions.c (func_config):
	new commands XineramaPrimaryScreen, XineramaSls and XineramaSlsSize

	* libs/Graphics.c (RelieveRectangle):
	allow calling the function with w == 0 or h == 0 without a message

	* fvwm/window_flags.h (SET_STYLE_DELETED):
	* fvwm/style.c (CMD_DestroyStyle):
	(check_window_style_change):
	* fvwm/fvwm.h (window_style):
	update windows when a style is deleted

	* configure.in:
	fixed xpm detection problem caused by wrong library order

2001-09-05  olicha  <olivier.chapuis@free.fr>

	* NEWS: PlacedByFvwm

2001-09-04  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1 (PlacedByFvwm): Grammar.

2001-09-04  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.h:
	* fvwm/windows_flags.h:
	* fvwm/placement.c (PlaceWindow):
	* fvwm/add_window.c (setup_window_structure):
	* fvwm/conditional.c (CreateConditionMask):
	* fvwm/session.c (get_version_string):
	(MatchWinToSM):
	* fvwm/fvwm2.1:
	Added a new windows_flags is_placed_by_fvwm and a new condition
	PlacedByFvwm

2001-09-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_grab_buttons):
	(MoveFocus):
	disabled xt/double click patch for now

2001-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Graphics.c (RelieveRectangle):
	print a warning if one of the dimensions is <= 0

	* fvwm/placement.c (PlaceWindow):
	take care of windows that have both, PPosition and USPosition set
	take care of transient windows that have neither PPosition nor
	USPosition set

2001-09-01  olicha  <olivier.chapuis@free.fr>

	* libs/FScreen.c (FScreenInit):