@@ -1,5 +1,5 @@
 .\" Automatically generated by Pod::Man version 1.02
-.\" Wed Jul 25 03:45:04 2001
+.\" Wed Sep  5 18:15:45 2001
 .\"
 .\" Standard preamble:
 .\" ======================================================================
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "FVWM-MENU-HEADLINES 1"
-.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2001-07-25" "Fvwm Utility"
+.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2001-09-05" "Fvwm Utility"
 .UC
 .SH "NAME"
 fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
@@ -166,8 +166,8 @@ fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
 .IX Header "DESCRIPTION"
 This configurable perl script builds an fvwm menu definition for headlines
 of popular news web sites: FreshMeat, Slashdot, LinuxToday, Segfault, AppWatch,
-LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt
-and more.
+LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt,
+LinuxFr and more.
 .PP
 It is possible to specify a customized menu item format, change a command
 (usually launching a browser) and add menu icons (there is a support for
@@ -266,7 +266,7 @@ Then add these lines to your fvwm configuration file:
 .Vb 3
 \&  DestroyFunc FuncFvwmMenuHeadlines
 \&  AddToFunc   FuncFvwmMenuHeadlines
-\&  + I Read "$HOME/.fvwm-menu-headlines/$0.menu"
+\&  + I Read "$HOME/.fvwm/.fvwm-menu-headlines/$0.menu"
 .Ve
 .Vb 6
 \&  DestroyMenu MenuHeadlines
