@@ -120,6 +120,13 @@ local $siteInfo = {
 		'func' => \&processPoorRdf,
 		'flds' => 'title, link',
 	},
+	'linuxfr' => {
+		'name' => "LinuxFr",
+		'host' => "linuxfr.org",
+		'path' => "/short.php3",
+		'func' => \&processLinuxFr,
+		'flds' => 'title, link, author, author_email, type',
+	},
 };
 
 # Site specific parsers may use these constants to convert month to unix time.
@@ -542,6 +549,19 @@ sub processKuro5hin () {
 	);
 }
 
+sub processLinuxFr () {
+	while (<SOCK>) {
+		last if /^%%/;  # skip the text note
+	}
+	return processText(
+		[ qw( headline url author_name author_email type _ignore_ ) ],
+		{ 'h' => 'headline', 'u' => 'url', 'd' => undef },
+		sub ($) {
+			# this site's rdf does not supply the time, how weird...
+			(gmtime())[5,4,3,2,1,0];
+		}, +0
+	);
+}
 # ---------------------------------------------------------------------------
 
 sub dieSys ($) {
@@ -670,8 +690,8 @@ B<fvwm-menu-headlines>
 
 This configurable perl script builds an fvwm menu definition for headlines
 of popular news web sites: FreshMeat, Slashdot, LinuxToday, Segfault, AppWatch,
-LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt
-and more.
+LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt,
+LinuxFr and more.
 
 It is possible to specify a customized menu item format, change a command
 (usually launching a browser) and add menu icons (there is a support for
@@ -770,7 +790,7 @@ Then add these lines to your fvwm configuration file:
 
   DestroyFunc FuncFvwmMenuHeadlines
   AddToFunc   FuncFvwmMenuHeadlines
-  + I Read "$HOME/.fvwm-menu-headlines/$0.menu"
+  + I Read "$HOME/.fvwm/.fvwm-menu-headlines/$0.menu"
 
   DestroyMenu MenuHeadlines
   AddToMenu   MenuHeadlines "Headlines" Title
